tests/negative/test_func_conflict.orb
fnc foo(i32 x) {}
fnc foo(i32 x) i32 { ret 0; }

fnc main() {}